algoriddle-kustomize/backendapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: algoriddlebackendapi
  labels:
    app: algoriddlebackendapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: algoriddlebackendapi
  template:
    metadata:
      labels:
        app: algoriddlebackendapi
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: api
        image: btymo/privatealgoriddlebackendapi:v0.0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
