algoriddle-kustomize/backendapi/service.yaml
apiVersion: v1
kind: Service
namespace: develop
metadata:
  name: algoriddlebackendapi-service
spec:
  selector:
    app: algoriddlebackendapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
