algoriddle-kustomize/backendapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
namespace: develop
metadata:
  name: algoriddlebackendapi-ingress
spec:
  rules:
  - host: algoriddlebackendapi.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: algoriddlebackendapi-service
            port:
              number: 8080
